tests/errors/test_undefined_variable_simple.mob
// Test undefined variable error
print("Testing undefined variable:");
var y = missing_var;
print("This should never print");

